--- a/appli.html
+++ b/appli.html
@@ -21,7 +21,7 @@
                         
                         <br><br>
 
-                <button type="execute" class="btn-lg"
+                <button type="button" class="btn-lg"
                 onClick=>Bang!</button>
                 
                 <br><br>
